- Move the disconnect link to the Presence widget (better for mobile) - Fix lot of little mobiles issues - Show avatars in Posts on mobile + CSS fixs - Hive Chats on mobile

--- a/themes/movim/css/submitform.css
+++ b/themes/movim/css/submitform.css
@@ -2,10 +2,9 @@
 
 table#feedsubmitform {
     display: block;
-    margin-top: 0px;
+    margin: 0 1.5em;
     overflow: hidden;
     padding-bottom: 0;
-    margin: 0 1.5em;
     border: 1px solid #DDD;
     border-bottom: 0;
     border-radius: 0.1em 0.1em 0em 0em;
